LPS-18234 - IE7 asset publisher configuration CSS alignment issues
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@83798 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/portal-web/docroot/html/themes/_unstyled/css/forms.css
+++ b/portal-web/docroot/html/themes/_unstyled/css/forms.css
@@ -4,6 +4,9 @@ fieldset {
 .ie fieldset {
 }
 
+.ie7 .aui-fieldset {
+}
+
 .aui-fieldset {
 }
 
